--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ hr{
   display: block;
   height: 0;
   width: 60%;
-  border-width: 3px;
-  border-color: rgb(35, 145, 2);
-  border-bottom-style: solid;
+  
+  border: 3px solid rgb(35, 145, 2);
+  
   margin: 10px;
   padding: 0;
 }
